--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@types/json-schema": "^7.0.15",
+    "vue": "^3.5.13",
+    "vue-plugin-load-script": "^2.1.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
